institution logo added to institution page

--- a/website/templates/institution.html
+++ b/website/templates/institution.html
@@ -3,6 +3,7 @@
 {% block content %}
       <div class="starter-template">
           <h1>{{inst.PROVIDER_NAME}}</h1>
+          <img src={{logo}} class=img-fluid>
           <p class="lead">{{inst}}</p>
         </p>
         {% for c in courses %}
