--- a/website/templates/rank.html
+++ b/website/templates/rank.html
@@ -4,12 +4,20 @@
       <div class="starter-template">
         <h1>Ranks</h1>
         <p class="lead"> Table will go here </p>
-        <p> Study Level {{studylvl}} </p>
-        <p> Region {{region}} </p>
-        <p> Department {{department}} </p>
-        <p> grad {{gradrate}} </p>
-        <p> employ {{employ}} </p>
-        <p> quality of life {{qol}} </p>
-        <p> teaching {{teach}} </p>
+        {% for course in courses %}
+            {{ course.TITLE }}
+        {% endfor %}
       </div>
+        <table class="table table-striped">
+            <thead>
+                <th scope="col">Course Title</th>
+            </thead>
+            <tbody>
+            {% for course in courses %}
+                <tr>
+                    <td>{{course.PROVIDER_NAME}}</td><td><a href="/course/{{course.KISCOURSEID}}">{{course.TITLE}}</a></td>
+                </tr>
+            {%endfor%}
+            </tbody>
+        </table>
 {% endblock %}
