base file changed

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -46,7 +46,15 @@
             <li><a href="/about">About</a></li>
             <li><a href="/unis">List of Universities</a></li>
           </ul>
+           <form class="navbar-form navbar-right">
+        <div class="form-group input-group">
+            <input type="text" class="form-control" id="key-movie" placeholder="University/department/programmes">
+            <span class="input-group-btn"><a class="btn btn-default"><span
+                    class="glyphicon glyphicon-search"></span>Search</a></span>
+        </div>
         </div><!--/.nav-collapse -->
+
+    </form>
       </div>
     </nav>
 
