--- a/website/templates/institution.html
+++ b/website/templates/institution.html
@@ -1,22 +1,18 @@
-{#% extends "base.html" %}
-{% block title %}Rank it{% endblock %#}
+{% extends "base.html" %}
+{% block title %}Rank it{% endblock %}
 {% block content %}
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         
-        <div class='page_path'></div>
-
-        <div class="container bg-success">
-            <div class="row bg-warning">
-              <div class="col-sm text-center">
+        <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
+        
+        <div class="container">
+            <div class="row bg-primary">
+              <div class="col-md text-center">
                 <h2>{{inst.PROVIDER_NAME}}</h2>
               </div>
             </div>
             <div class="row">
-              <div class="col-sm bg-primary">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+              <div class="col-md-6 bg-success">
+                <p><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                   Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                   when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                   It has survived not only five centuries, but also the leap into electronic typesetting, 
@@ -25,32 +21,32 @@
                   and more recently with desktop publishing software like Aldus PageMaker 
                   including versions of Lorem Ipsum.</p>
               </div>
-              <div class="col-sm bg-secondary">
-                <img src={{logo}} width="200" height="200" />
+              <div class="col-md-6 bg-danger">
+                <img src={{logo}} width="200" height="200" class='img-responsive center-block' />
               </div> 
             </div>
-            <div class="row">
-              <div class="col-sm">
+            <div class="row bg-info">
+              <div class="col-md-8">
                 <h5>Departments</h5>
               </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 bg-dark">
+                <div class="col-md-6 bg-warning">
                     <ul>
                     {% for c in range(5) %}
                       <li><a href="/course/{{courses[c].KISCOURSEID}}">{{courses[c].TITLE}}</a></li>
                     {%endfor%}
                     </ul>
                 </div> 
-                <div class="col-sm-6 bg-danger">
+                <div class="col-md-6 bg-danger">
                     <div class="container">
                       <div class="row">
-                        <div class="col-sm"><label>1</label></div>
-                        <div class="col-sm"><p>2</p></div>
+                        <div class="col-md-2 bg-primary col-centered" ><label>Graduation rates 76%</label></div>
+                        <div class="col-md-2 bg-success col-centered"><label>Employment chances 85%</label></div>
                       </div>
                       <div class="row">
-                        <div class="col-sm"><p>3</p></div>
-                        <div class="col-sm"><p>4</p></div>
+                        <div class="col-md-2 bg-info"><label>Quality of life measures 72%</label></div>
+                        <div class="col-md-2 bg-warning"><label>Teaching excellence 70%</label></div>
                       </div>
                     </div>      
                 </div> 
