--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -17,7 +17,8 @@
         </div>
         <div class="form-group">
             <input type="text" name="department" placeholder="Course">
-            <input type="number" name="salary" placeholder="salary" min="0" max="100">
+            <input type="number" name="salary" placeholder="salary" min="0"
+            max="100" value="25">
             <input type="number" name="teaching" placeholder="Quality of Teaching" min="0" max="100">
             <input type="number" name="qol" placeholder="Quality of Life" min="0" max="100">
             <input type="number" name="employ" placeholder="Employment Chances" min="0" max="100">
