--- a/website/templates/rank.html
+++ b/website/templates/rank.html
@@ -3,10 +3,6 @@
 {% block content %}
       <div class="starter-template">
         <h1>Ranks</h1>
-        <p class="lead"> Table will go here </p>
-        {% for course in courses %}
-            {{ course.TITLE }}
-        {% endfor %}
       </div>
         <table class="table table-striped">
             <thead>
@@ -15,7 +11,8 @@
             <tbody>
             {% for course in courses %}
                 <tr>
-                    <td>{{course.PROVIDER_NAME}}</td><td><a href="/course/{{course.KISCOURSEID}}">{{course.TITLE}}</a></td>
+                    <td>{{course.PROVIDER_NAME}}</td><td><a
+                    href="/course/{{course.KISCOURSEID}}">{{course.TITLE}}</a></td>
                 </tr>
             {%endfor%}
             </tbody>
