--- a/website/templates/institution.html
+++ b/website/templates/institution.html
@@ -12,7 +12,7 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <p><br>{{wiki.summary}}<a href={{wiki.url}}>...</a></p>
+                <p style="font-family:sans-serif; font-size: 20px"><br>{{wiki.summary}}<a href={{wiki.url}}>...</a></p>
                 </initrd.imgv>
               </div>
               <div class="col-md-6">
@@ -34,8 +34,8 @@
                 </div> 
                 <div class="col-md-6">
                       <div class="row">
-                        <div class="col-md-6 text-right" ><label>Graduation rates 76%</label></div>
-                        <div class="col-md-6 text-left"><label>Employment chances 85%</label></div>
+                        <div class="col-md-6 text-right" ><label>Graduation rates </br>76%</label></div>
+                        <div class="col-md-6 text-left"><label>Employment chances </br>85%</label></div>
                       </div>
                       <div class="row">
                         <div class="col-md-6 text-right"><label>Quality of life measures 72%</label></div>
