--- a/website/static/css/a.css
+++ b/website/static/css/a.css
@@ -1,4 +1,4 @@
-label { 
+.sd_percentage { 
     font-family:sans-serif; 
     font-size: 15px; 
     width: 120px;
@@ -11,16 +11,19 @@ label {
   h3 {
     font-family:sans-serif;    
   }
-  .institution_name {
-    font-family: Open sans-serif; 
-    font-size: 35px; 
-    font-weight: bold;
-  }
-  #about{
-    font-family:sans-serif; 
-    font-size: 20px;
-  }
-  #course_list_item{
-    font-family:sans-serif; 
-    font-size: 20px;
-  }
+.sd_path{
+  padding: 10px;
+}
+.equal {
+  display: flex;
+  display: -webkit-flex;
+  flex-wrap: wrap;
+}
+.imageCenterAlign{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.topAlign{
+  top:50%;
+}
