--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-             <li> <a href="#">
+             <li> <a href="/">
           <span class="glyphicon glyphicon-home" style="font-size:24px;color:grey"></span> </a>  </li>  
           <li><span class="navbar-text" style="font-size:20px;margin: 16
           px;">Rank it</span>
