--- a/website/templates/institution.html
+++ b/website/templates/institution.html
@@ -4,19 +4,22 @@
         
         <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
         <link href="{{ url_for('static',filename='css/a.css') }}" rel="stylesheet">
-        <div class="container">
+        <div class="container" style="padding:10px">
+            <div class='row sd_path'>
+              <a href="/">Home</a><label>Institution profile</label>
+            </div>
             <div class="row">
               <div class="col-md text-center">
                 <p style="font-family: Open sans-serif; font-size: 35px; font-weight: bold">{{inst.PROVIDER_NAME}}</p>
               </div>
             </div>
-            <div class="row">
-              <div class="col-md-6">
+            <div class="row imageCenterAlign topAlign">
+              <div class="col-md-6 equal center-block image-center">
                 <p style="font-family:sans-serif; font-size: 20px"><br>{{wiki.summary}}<a href={{wiki.url}}>...</a></p>
                 </initrd.imgv>
               </div>
-              <div class="col-md-6">
-                <img src={{logo}} height="300" width="300" class='img-responsive center-block' />
+              <div class="col-md-6 equal">
+                <img src={{logo}} height="300" class="center-block image-center" />
               </div> 
             </div>
             <div class="row">
@@ -34,12 +37,12 @@
                 </div> 
                 <div class="col-md-6">
                       <div class="row">
-                        <div class="col-md-6 text-right" ><label>Graduation rates </br>76%</label></div>
-                        <div class="col-md-6 text-left"><label>Employment chances </br>85%</label></div>
+                        <div class="col-md-6 text-right" ><label class="sd_percentage">Graduation rates </br>76%</label></div>
+                        <div class="col-md-6 text-left"><label class="sd_percentage">Employment chances </br>85%</label></div>
                       </div>
                       <div class="row">
-                        <div class="col-md-6 text-right"><label>Quality of life measures 72%</label></div>
-                        <div class="col-md-6 text-left"><label>Teaching excellence 70%</label></div>
+                        <div class="col-md-6 text-right"><label  class="sd_percentage">Quality of life measures 72%</label></div>
+                        <div class="col-md-6 text-left"><label class="sd_percentage">Teaching excellence 70%</label></div>
                       </div>      
                 </div> 
             </div>  
