--- a/website/templates/institution_colored.html
+++ b/website/templates/institution_colored.html
@@ -4,25 +4,22 @@
         
         <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
         <link href="{{ url_for('static',filename='css/a.css') }}" rel="stylesheet">
-        <div class="container">
+        <div class="container" style="padding:10px">
+            <div class='row bg-info sd_path'>
+              <a href="/">Home</a><label>Institution profile</label>
+            </div>
             <div class="row bg-primary">
               <div class="col-md text-center">
                 <p style="font-family: Open sans-serif; font-size: 35px; font-weight: bold">{{inst.PROVIDER_NAME}}</p>
               </div>
             </div>
-            <div class="row">
-              <div class="col-md-6 bg-success">
-                <p style="font-family:sans-serif; font-size: 20px"><br>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                  Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                  when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                  It has survived not only five centuries, but also the leap into electronic typesetting, 
-                  remaining essentially unchanged. It was popularised in the 1960s with 
-                  the release of Letraset sheets containing Lorem Ipsum passages, 
-                  and more recently with desktop publishing software like Aldus PageMaker 
-                  including versions of Lorem Ipsum.</p>
+            <div class="row imageCenterAlign topAlign">
+              <div class="col-md-6 bg-success equal center-block image-center">
+                <p style="font-family:sans-serif; font-size: 20px"><br>{{wiki.summary}}<a href={{wiki.url}}>...</a></p>
+                </initrd.imgv>
               </div>
-              <div class="col-md-6 bg-danger">
-                <img src={{logo}} height="300" width="300" class='img-responsive center-block' />
+              <div class="col-md-6 bg-danger equal">
+                <img src={{logo}} height="300" class="center-block image-center" />
               </div> 
             </div>
             <div class="row bg-info">
@@ -40,12 +37,12 @@
                 </div> 
                 <div class="col-md-6 bg-danger">
                       <div class="row">
-                        <div class="col-md-6 bg-primary text-right" ><label>Graduation rates 76%</label></div>
-                        <div class="col-md-6 bg-success text-left"><label>Employment chances 85%</label></div>
+                        <div class="col-md-6 bg-primary text-right" ><label class="sd_percentage">Graduation rates </br>76%</label></div>
+                        <div class="col-md-6 bg-success text-left"><label class="sd_percentage">Employment chances </br>85%</label></div>
                       </div>
                       <div class="row">
-                        <div class="col-md-6 bg-info text-right"><label>Quality of life measures 72%</label></div>
-                        <div class="col-md-6 bg-warning text-left"><label>Teaching excellence 70%</label></div>
+                        <div class="col-md-6 bg-info text-right"><label  class="sd_percentage">Quality of life measures 72%</label></div>
+                        <div class="col-md-6 bg-warning text-left"><label class="sd_percentage">Teaching excellence 70%</label></div>
                       </div>      
                 </div> 
             </div>  
