--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -2,27 +2,100 @@
 {% block title %}Rank it{% endblock %}
 {% block content %}
       <div class="starter-template">
-        <h1>RankIt</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <h1>Rank it!</h1>
+        <p class="lead">A research tool for prospective university students</p>
       </div>
      <form action="/rank?" method="get">
         <div class="form-group">
-            <div class="input-group">
+            <div class="input-group" >
             <label for="studyLevelSelect">Study Level</label>
             <select name="study" class="form-control" id="studyLevelSelect">
                 <option>Undergraduate</option>
                 <option>Postgraduate</option>
             </select>
+            <label for="regionSelect">Region</label>
+            <select name="region" class="form-control" id="regionSelect">
+                <option>Worldwide</option>
+                <option>UK</option>
+            </select>
+            <label for="departmentSelect">Department</label>
+            <select name="deparment" class="form-control" id="departmentSelect">
+                <option>All departments</option>
+                <option>Computer Science</option>
+            </select>
+            <label for="yearSelect">Year</label>
+            <select name="year" class="form-control" id="yearSelect">
+                <option>2018</option>
+                <option>2017</option>
+            </select>
             </div>
         </div>
-        <div class="form-group">
-            <input type="text" name="department" placeholder="Course">
-            <input type="number" name="salary" placeholder="salary" min="0"
-            max="100" value="25">
-            <input type="number" name="teaching" placeholder="Quality of Teaching" min="0" max="100">
-            <input type="number" name="qol" placeholder="Quality of Life" min="0" max="100">
-            <input type="number" name="employ" placeholder="Employment Chances" min="0" max="100">
-        </div>
-        <input type="submit" class="btn btn-primary" value="Submit">
+
+
+
+        <div class="form-group-text">
+            <div id="val1" style="vertical-align:text-bottom; display:inline">Graduation rates</div>
+            <div id="val2" style="vertical-align:text-bottom; display:inline">Employment chances</div>
+            <div id="val3" style="vertical-align:text-bottom; display:inline">Quality of life</div>
+            <div id="val3" style="vertical-align:text-bottom; display:inline">Teaching excellence</div>
+         </div>
+         <div class="form-group">
+<div class="slidecontainer"  style="width:180px; height:auto; float:left;magin:50px;display:inline ">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
+  <span id="sliderval1"></span>
+</div>
+
+<div class="slidecontainer"  style="width:180px; height:auto; float:left;magin:50px; display:inline">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
+  <span id="sliderval2"></span>
+</div>
+
+<div class="slidecontainer"  style="width:180px; height:auto;float:left; display:inline">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
+  <span id="sliderval3"></span>
+</div>
+
+
+<div class="slidecontainer"  style="width:180px; height:auto;float:left;display:inline">
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange4">
+  <span id="sliderval4"></span>
+</div>
+</div>
+<script>
+var slider1 = document.getElementById("myRange1");
+var output1 = document.getElementById("sliderval1");
+output1.innerHTML = slider1.value; // Display the default slider value
+
+// Update the current slider value (each time you drag the slider handle)
+slider1.oninput = function() {
+  output1.innerHTML = this.value;
+}
+
+var slider2 = document.getElementById("myRange2");
+var output2 = document.getElementById("sliderval2");
+output2.innerHTML = slider2.value; 
+slider2.oninput = function() {
+  output2.innerHTML = this.value;
+}
+
+var slider3 = document.getElementById("myRange3");
+var output3 = document.getElementById("sliderval3");
+output3.innerHTML = slider3.value; 
+slider3.oninput = function() {
+  output3.innerHTML = this.value;
+}
+
+var slider4 = document.getElementById("myRange4");
+var output4 = document.getElementById("sliderval4");
+output4.innerHTML = slider4.value; 
+slider4.oninput = function() {
+  output4.innerHTML = this.value;
+}
+</script>     
+     <div >
+      <input type="submit" class="btn btn-primary" value="Rank" style="background-color: black;text-align: center;margin-top: 40px;">
+     </div>
+       
      </form>
+    
 {% endblock %}
