--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -158,7 +158,8 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3  center-block">
+            <div class="col-md-3  col-center">
+            <!--div class="col-md-3 col-md-offset-3"-->    
                 <input type="submit" value="search">
             </div>
         </div>
