--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -158,8 +158,9 @@
         </div>
 
         <div class="row">
-            <div class="col-md-3  col-center">
-            <!--div class="col-md-3 col-md-offset-3"-->    
+            <div class="col-md-3">
+            <!--div class="col-md-3 col-md-offset-3"-->
+            <!--div class="col-md-3 col-center"-->    
                 <input type="submit" value="search">
             </div>
         </div>
