--- a/website/templates/rank.html
+++ b/website/templates/rank.html
@@ -6,13 +6,19 @@
       </div>
         <table class="table table-striped">
             <thead>
-                <th scope="col">Course Title</th>
+                <th scope="col">University</th>
+                <th scope="col">Course</th>
+                <th scope="col">Teaching Quality</th>
+                <th scope="col">Median Salary</th>
             </thead>
             <tbody>
             {% for course in courses %}
                 <tr>
-                    <td>{{course.PROVIDER_NAME}}</td><td><a
-                    href="/course/{{course.KISCOURSEID}}">{{course.TITLE}}</a></td>
+                    <td><a
+                    href=/institution/{{course.UKPRN}}">{{course.PROVIDER_NAME}}</a></td>
+                    <td><a href="/course/{{course.PROVIDER_NAME}}/{{course.KISCOURSEID}}">{{course.TITLE}}</a></td>
+                    <td>{{course.nss.0.Q27}}</td>
+                    <td>{{course.salary.0.MED}}</td>
                 </tr>
             {%endfor%}
             </tbody>
