added uni list table

--- a/website/templates/course.html
+++ b/website/templates/course.html
@@ -11,7 +11,7 @@
           <div class='row sd_navigation'>
             <a href="/" class="sd_navigation_item" style="color:#333333"><u>Home</u></a>
             <img class="sd_navigation_item" src="/static/images/next1.png" disabled/>
-            <a href="/" class="sd_navigation_item" style="color:#333333"><u>University profile</u></a>
+            <a href="/institution/{{course.UKPRN}}" class="sd_navigation_item" style="color:#333333"><u>University profile</u></a>
             <img class="sd_navigation_item" src="/static/images/next1.png" disabled/>
             <label class="sd_navigation_item">Program profile</label>
           </div>
