--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,6 +19,7 @@
     <link href="{{ url_for('static',filename='css/starter-template.css') }}" rel="stylesheet">
 
     <link href="{{ url_for('static',filename='css/base.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static',filename='js/jquery-3.3.1.js') }}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -45,7 +46,7 @@
           </ul>
            <form class="navbar-form navbar-right">
         <div class="form-group input-group" style="margin: 3px;"">
-            <input type="text" class="form-control" id="searchbar" placeholder="University/department,etc">
+            <input type="text" class="form-control" id="searchbar" placeholder="">
             <span class="input-group-btn"><a class="btn btn-default"><span
                     class="glyphicon glyphicon-search"></span>Search</a></span>
         </div>
@@ -65,12 +66,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
   </body>
 
-   <footer  class="footer navbar-fixed-bottom " style="background-color: : #bdbdbd;">
+  <footer  class="footer navbar-fixed-bottom " style="background-color: : #bdbdbd;">
       {% block footer %}
       <span style="color: black"><a href="http://domain.invalid/">Terms of use</a></span>
       <span style="color: black"><a href="http://domain.invalid/">About us</a></span>
@@ -89,5 +88,5 @@
 </div>
 </section>
     {% endblock %}
-    </footer>
+  </footer>
 </html>
