--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,6 +19,7 @@
     <link href="{{ url_for('static',filename='css/starter-template.css') }}" rel="stylesheet">
 
     <link href="{{ url_for('static',filename='css/base.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static',filename='js/jquery-3.3.1.js') }}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -46,7 +47,7 @@
            <form class="navbar-form navbar-right">
         <div class="form-group input-group" style="margin: 3px;"">
             <input type="text" class="form-control" id="searchbar" placeholder="University/department,etc">
-            <span class="input-group-btn"><a class="btn btn-default"><span
+            <span class="input-group-btn"><a href="/search" class="btn btn-default"><span
                     class="glyphicon glyphicon-search"></span>Search</a></span>
         </div>
         </div><!--/.nav-collapse -->
@@ -65,8 +66,6 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="{{ url_for('static',filename='js/bootstrap.min.js') }}"></script>
 
   </body>
