--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -72,7 +72,7 @@
 
 
 <!-- Footer -->
-<footer class="page-footer font-small bg-secondary text-white pt-4" ">
+<footer class="page-footer font-small pt-4 ">
 
     <!-- Footer Elements -->
     <div class="container">
@@ -80,13 +80,13 @@
       <!-- Call to action -->
       <ul class="list-unstyled list-inline py-2">
         <li class="list-inline-item">
-         <a href="http://webenlance.com">Terms of use</a>
+         <a href="http://webenlance.com" class="custom">Terms of use</a>
         </li>
         <li class="list-inline-item">
-          <a href="http://webenlance.com">About us</a></a>
+          <a href="http://webenlance.com" class="custom">About us</a></a>
         </li>
-        <li><a href="http://webenlance.com">Cookies</a></li>
-        <li><a href="http://webenlance.com">Privacy</a></li>
+        <li><a href="http://webenlance.com" class="custom">Cookies</a></li>
+        <li><a href="http://webenlance.com" class="custom">Privacy</a></li>
       </ul>
       <!-- Call to action -->
 
@@ -96,11 +96,11 @@
     <!-- Copyright -->
    <section id="lab_social_icon_footer">
      <div class="container">
-        <div class="text-center center-block">
-                <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
-              <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
-              <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social"></i></a>
-              <a href="mailto:#"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+        <div class="icon">
+                <a href="https://www.facebook.com/bootsnipp"><i id="social-fb" class="fa fa-facebook-square fa-3x social custom"></i></a>
+              <a href="https://twitter.com/bootsnipp"><i id="social-tw" class="fa fa-twitter-square fa-3x social custom"></i></a>
+              <a href="https://plus.google.com/+Bootsnipp-page"><i id="social-gp" class="fa fa-google-plus-square fa-3x social custom"></i></a>
+              <a href="mailto:#"><i id="social-em" class="fa fa-envelope-square fa-3x social custom"></i></a>
     </div>
 </div>
 </section>
@@ -109,6 +109,25 @@
   </footer>
   <!-- Footer -->
 
-   
+   <style>
+   footer{
+    width: 100%;
+    height:100px;   
+    position:absolute;
+    bottom:0px;
+    left:0px;
+    background: #e0e0e0;
+
+}
+
+.custom {
+    color: black;
+}
+.icon {
+  position: fixed;
+  right: 50px;
+  
+}
+</style>
  
 </html>
