ajax request on main page added

--- a/website/templates/sandbox.html
+++ b/website/templates/sandbox.html
@@ -470,3 +470,22 @@
         </tr>
     </tbody>
 </table--> 
+
+<div class="container sd-table" style="visibility:hidden; margin-top: 20px">
+        <table id="example" class="table table-hover table-bordered table-striped" style="width:100%">
+            <thead>
+              <tr>
+                <th class="col-md-1 text-center">Rank</th>
+                <th class="col-md-3 text-center">Name</th>
+                <th class="col-md-2 text-center">Graduation rates</th>
+                <th class="col-md-2 text-center">Employment chances</th>
+                <th class="col-md-2 text-center">Quality of life</th>
+                <th class="col-md-2 text-center">Teaching excellence</th>
+              </tr>
+            </thead>
+            
+            <tbody>
+              <!-- here the rank results will be placed -->  
+            </tbody>
+        </table>   
+    </div>
