--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -1,109 +1,181 @@
 {% extends "base.html" %}
 {% block title %}Rank it{% endblock %}
 {% block content %}
-      <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
-      <link href="{{ url_for('static',filename='css/a.css') }}" rel="stylesheet">
-      
-      <div class="starter-template">
-        <h1>Rank it!</h1>
-        <p class="lead">A research tool for prospective university students</p>
+
+<script src="{{ url_for('static',filename='js/my.js') }}"></script>
+
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
+
+<link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
+<link href="{{ url_for('static',filename='css/dataTables.bootstrap.min.css') }}" rel="stylesheet"> 
+
+<link href="{{ url_for('static',filename='css/a.css') }}" rel="stylesheet">
+
+<div class="starter-template">
+  <h1>Rank it!</h1>
+  <p class="lead">A research tool for prospective university students</p>
+</div>
+
+<form action="" class="container ">
+  <div class="row">
+      <div class="form-group col-md-3">
+          <label for="studyLevelSelect">Study Level</label>
+          <select name="study" class="form-control" id="studyLevelSelect">
+                  <option>Undergraduate</option>
+                  <option>Postgraduate</option>
+          </select>        
       </div>
+      <div class="form-group col-md-3 ">
+          <label for="regionSelect">Region</label>
+          <select name="region" class="form-control" id="regionSelect">
+                  <option>Worldwide</option>
+                  <option>UK</option>
+          </select> 
+      </div>
+      <div class="form-group col-md-3 ">
+          <label for="departmentSelect">Department</label>
+          <select name="department" class="form-control" id="departmentSelect">
+                  <option>All departments</option>
+                  <option>Computer Science</option>
+          </select>    
+      </div>
+      <div class="form-group col-md-3 ">
+          <label for="yearSelect">Year</label>
+          <select name="year" class="form-control" id="yearSelect">
+                  <option>2018</option>
+                  <option>2017</option>
+          </select>
+      </div>
+  </div>
 
-     <form action="" class="container ">
-        <div class="row">
-            <div class="form-group col-md-3">
-                <label for="studyLevelSelect">Study Level</label>
-                <select name="study" class="form-control" id="studyLevelSelect">
-                        <option>Undergraduate</option>
-                        <option>Postgraduate</option>
-                </select>        
-            </div>
-            <div class="form-group col-md-3 ">
-                <label for="regionSelect">Region</label>
-                <select name="region" class="form-control" id="regionSelect">
-                        <option>Worldwide</option>
-                        <option>UK</option>
-                </select> 
-            </div>
-            <div class="form-group col-md-3 ">
-                <label for="departmentSelect">Department</label>
-                <select name="department" class="form-control" id="departmentSelect">
-                        <option>All departments</option>
-                        <option>Computer Science</option>
-                </select>    
-            </div>
-            <div class="form-group col-md-3 ">
-                <label for="yearSelect">Year</label>
-                <select name="year" class="form-control" id="yearSelect">
-                        <option>2018</option>
-                        <option>2017</option>
-                </select>
-            </div>
-        </div>
+  <div class="row ">
+      <div class="form-group col-md-3">
+          <label>Graduation rates</label>
+          <input type="range" min="1" max="100" value="50" class="slider" id="studyLevelRange">
+          <label id="sliderval1">50</label>        
+      </div>
+      <div class="form-group col-md-3">
+          <label>Employment chance</label>
+          <input type="range" min="1" max="100" value="50" class="slider" id="employmentChanceRange">
+          <label id="sliderval2"></label>        
+      </div>
+      <div class="form-group col-md-3">
+          <label>Quality of life</label>
+          <input type="range" min="1" max="100" value="50" class="slider" id="qualityOfLifeRange">
+          <label id="sliderval3"></label>        
+      </div>
+      <div class="form-group col-md-3">
+          <label>Teaching excellence</label>
+          <input type="range" min="1" max="100" value="50" class="slider" id="teachingExcellenceRange">
+          <label id="sliderval4"></label>        
+      </div>
+  </div>
 
-        <div class="row ">
-            <div class="form-group col-md-3">
-                <label>Graduation rates</label>
-                <input type="range" min="1" max="100" value="50" class="slider" id="studyLevelRange">
-                <label id="sliderval1">50</label>        
-            </div>
-            <div class="form-group col-md-3">
-                <label>Employment chance</label>
-                <input type="range" min="1" max="100" value="50" class="slider" id="employmentChanceRange">
-                <label id="sliderval2"></label>        
-            </div>
-            <div class="form-group col-md-3">
-                <label>Quality of life</label>
-                <input type="range" min="1" max="100" value="50" class="slider" id="qualityOfLifeRange">
-                <label id="sliderval3"></label>        
-            </div>
-            <div class="form-group col-md-3">
-                <label>Teaching excellence</label>
-                <input type="range" min="1" max="100" value="50" class="slider" id="teachingExcellenceRange">
-                <label id="sliderval4"></label>        
-            </div>
-        </div>
+  <div class="row">
+      <div class="text-center">
+      <!--div class="col-md-3 col-md-offset-3"-->
+      <!--div class="col-md-3 col-center"-->    
+        <input type="submit" class="btn btn-default" value="Rank submit">
+        <!--input type="button" class="btn btn-default" value="Rank button" onclick="set_visible()"-->
+      </div>
+  </div>
+</form>
 
-        <div class="row">
-            <div class="text-center">
-            <!--div class="col-md-3 col-md-offset-3"-->
-            <!--div class="col-md-3 col-center"-->    
-              <button type="button" class="btn btn-default">Rank</button>
-            </div>
-        </div>
-     </form>
+<div class="container sd-table" style="visibility:hidden; margin-top: 20px"> 
+</div>
 
-        <script>
-        var slider1 = document.getElementById("studyLevelRange");
-        var output1 = document.getElementById("sliderval1");
-        output1.innerHTML = slider1.value; // Display the default slider value
+<script>
+    var slider1 = document.getElementById("studyLevelRange");
+    var output1 = document.getElementById("sliderval1");
+    output1.innerHTML = slider1.value; // Display the default slider value
 
-        // Update the current slider value (each time you drag the slider handle)
-        slider1.oninput = function() {
-          output1.innerHTML = this.value;
-        }
+    // Update the current slider value (each time you drag the slider handle)
+    slider1.oninput = function() {
+    output1.innerHTML = this.value;
+    }
 
-        var slider2 = document.getElementById("employmentChanceRange");
-        var output2 = document.getElementById("sliderval2");
-        output2.innerHTML = slider2.value; 
-        slider2.oninput = function() {
-          output2.innerHTML = this.value;
-        }
+    var slider2 = document.getElementById("employmentChanceRange");
+    var output2 = document.getElementById("sliderval2");
+    output2.innerHTML = slider2.value; 
+    slider2.oninput = function() {
+    output2.innerHTML = this.value;
+    }
 
-        var slider3 = document.getElementById("qualityOfLifeRange");
-        var output3 = document.getElementById("sliderval3");
-        output3.innerHTML = slider3.value; 
-        slider3.oninput = function() {
-          output3.innerHTML = this.value;
-        }
+    var slider3 = document.getElementById("qualityOfLifeRange");
+    var output3 = document.getElementById("sliderval3");
+    output3.innerHTML = slider3.value; 
+    slider3.oninput = function() {
+    output3.innerHTML = this.value;
+    }
 
-        var slider4 = document.getElementById("teachingExcellenceRange");
-        var output4 = document.getElementById("sliderval4");
-        output4.innerHTML = slider4.value; 
-        slider4.oninput = function() {
-          output4.innerHTML = this.value;
-        }
-        </script>   
+    var slider4 = document.getElementById("teachingExcellenceRange");
+    var output4 = document.getElementById("sliderval4");
+    output4.innerHTML = slider4.value; 
+    slider4.oninput = function() {
+    output4.innerHTML = this.value;
+    }
+
+    var table_header = "<table id='example' class='table table-hover table-bordered table-striped' style=width:100%; visibility:hidden; margin-top: 20px'>"
+                        +"<thead>"
+                        +"<tr>"
+                            +"<th class='col-md-1 text-center'>Rank</th>"
+                            +"<th class='col-md-3 text-center'>Name</th>"
+                            +"<th class='col-md-2 text-center'>Graduation rates</th>"
+                            +"<th class='col-md-2 text-center'>Employment chances</th>"
+                            +"<th class='col-md-2 text-center'>Quality of life</th>"
+                            +"<th class='col-md-2 text-center'>Teaching excellence</th>"
+                        +"</tr>"
+                        +"</thead>"
+                        +"<tbody>"; 
+    var table_footer = "</tbody></table>";
+
+    function set_invisible(){
+      $(".sd-table").css({"visibility":"hidden"});
+    }
+    function set_visible(){
+      $(".sd-table").css({"visibility":"visible"});
+    }
+    function add_table(table){
+      $(".sd-table").html(table);
+      $('#example').DataTable();
+    }
+    function new_row(rank, PROVIDER_NAME, UKPRN, gr, ec, qol, te){
+      var html = "<tr>"+
+                "<td class='col-md-1 text-center'>"+rank+"</td>"+
+                "<td class='col-md-3 text-center'>"+"<a href='/institution/"+UKPRN+"'>"+PROVIDER_NAME+"</a></td>"+
+                "<td class='col-md-2 text-center'>"+gr+"%"+"</td>"+
+                "<td class='col-md-2 text-center'>"+ec+"%"+"</td>"+
+                "<td class='col-md-2 text-center'>"+qol+"%"+"</td>"+
+                "<td class='col-md-2 text-center'>"+te+"%"+"</td>"+  
+                "</tr>";          
+      return html;  
+    }
+    $(function () {
+        $('form').submit('click', function (event) {
+            formdata = $('form').serialize();
+            event.preventDefault();// using this page stop being refreshing 
+            $.ajax({
+                type: 'POST',
+                url: '/test',
+                data: formdata,
+                success: function (msg) {
+                  msg = msg.replace(/NaN/g, 'null');
+                  var json = $.parseJSON(msg);
+                  var table_rows = "";
+                  for(let i = 0; i < json.length; i++){
+                    if(typeof json[i].PROVIDER_NAME !== 'undefined'){
+                      table_rows = table_rows + new_row(i+1, json[i].PROVIDER_NAME, json[i].UKPRN, 100, 100, 100, 100);
+                    }
+                  }
+                  var table = table_header+table_rows+table_footer;
+                  add_table(table);
+                  set_visible();
+                }
+            });
+        });
+      });
+</script>   
 
     
 {% endblock %}
