base file changed

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -46,7 +46,7 @@
           </ul>
            <form class="navbar-form navbar-right">
         <div class="form-group input-group" style="margin: 3px;"">
-            <input type="text" class="form-control" id="searchbar" placeholder="University/department,etc">
+            <input type="text" class="form-control" id="searchbar" placeholder="type here ...">
             <span class="input-group-btn"><a href="/search" class="btn btn-default"><span
                     class="glyphicon glyphicon-search"></span>Search</a></span>
         </div>
