search working, fixed some errors causing institution page to crash

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -46,7 +46,7 @@
           </ul>
            <form class="navbar-form navbar-right" action="/search" method="get">
             <div class="form-group input-group" style="margin: 3px;">
-            <input type="text" class="form-control" id="searchbar" placeholder="type here ...">
+            <input type="text" class="form-control" name="searchInput" id="searchbar" placeholder="type here ...">
             <button type="submit" class="btn btn-primary">Search</button>
         </div><!--/.nav-collapse -->
         </form>
