--- a/website/templates/search_result.html
+++ b/website/templates/search_result.html
@@ -7,15 +7,25 @@
  <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
  <link href="{{ url_for('static',filename='css/a.css') }}" rel="stylesheet">
 
-<h1>Search result</h1>
+<h1>Search results</h1>
 <hr>
 <div>
-<ul id="results"> 
-  <li><a href="www.ed.ac.uk">University of Edinburgh</a></li>
-  <li><a href="www.ed.ac.uk">University of Edinburgh</a></li>
-  <li><a href="www.ed.ac.uk">University of Edinburgh</a></li>
-  <li><a href="www.ed.ac.uk">University of Edinburgh</a></li>
- </ul>
+    {% if unis %}
+        <h2> Institutions </h2>
+        <ul>
+            {% for uni in unis %}
+            <li> <a href="/institution/{{ uni.UKPRN }}">{{ uni.PROVIDER_NAME }}</a></li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+    {% if courses %}
+        <h2> Courses </h2>
+        <ul>
+            {% for course in courses %}
+                <li> {{ course.TITLE }} </li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 </div>
 
 
