added index page ranking

--- a/website/templates/course.html
+++ b/website/templates/course.html
@@ -31,8 +31,16 @@
         </h3>
     </div>
     <div class="panel-body" id="pro_dscri">
-        Here is the programme description NEEDED FROM DATABASE
-        <p class="lead">{{course}}</p>
+        <p class="lead">
+          This fundamental course for all writing students introduces students 
+          to the conventions of academic writing. It emphasizes defining and developing 
+          a significant topic and using principles of clear thinking to support 
+          an assertive or argumentative thesis. Students will gain an understanding 
+          of their subject matter, audience, purpose, and point-of-view, 
+          and demonstrate that understanding through the organization and development 
+          of their essays. Students will learn how to analyze and evaluate other writers' work 
+          to sharpen their critical abilities as readers and writers.
+        </p>
     </div>
    </div>
 
@@ -60,19 +68,38 @@
             <tr>
               <th scope="col" style="width:25%">Programme start date</th>
               <th scope="col" style="width:25%">Application deadline</th>
-              <th scope="col" style="width:25%">Study modes</th>
+              <th scope="col" style="width:25%">Study mode</th>
               <th scope="col" style="width:25%">Duration</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td id="infor_sta_date">date</td>
-              <td id="infor_deadline">deadline</td>
-              <td id="infor_mode">modes</td>
-              <td id="infor_duration">duration</td>
+              <td id="infor_sta_date">{{date}}</td>
+              <td id="infor_deadline">{{deadline}}</td>
+              <td id="infor_mode">{{modes}}</td>
+              <td id="infor_duration">{{duration}}</td>
             </tr>
           </tbody>
-        </table>
+      </table>
+
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th scope="col" style="width:25%">Garduation rates</th>
+            <th scope="col" style="width:25%">Employment chance</th>
+            <th scope="col" style="width:25%">Salary</th>
+            <th scope="col" style="width:25%">Teaching excellence</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="infor_sta_date">100%</td>
+            <td id="infor_deadline">100%</td>
+            <td id="infor_mode">10000$</td>
+            <td id="infor_duration">100%</td>
+          </tr>
+        </tbody>
+    </table>
     </div>
    </div>
 
