--- a/website/templates/index_colored.html
+++ b/website/templates/index_colored.html
@@ -147,7 +147,7 @@
             </div>
             <div class="form-group col-md-3">
                 <label>Quality of life</label>
-                <input type="range" min="1" max="100" value="50" class="slider" id="qualityOfLifeRange">
+                <input type="range" min="1" max="100" value="50" class="slider" id="salaryOfLifeRange">
                 <span id="sliderval3"></span>        
             </div>
             <div class="form-group col-md-3">
