--- a/website/templates/institution.html
+++ b/website/templates/institution.html
@@ -5,17 +5,17 @@
         <link href="{{ url_for('static',filename='css/bootstrap.min.css') }}" rel="stylesheet">
         <link href="{{ url_for('static',filename='css/a.css') }}" rel="stylesheet">
         <div class="container" style="padding:10px">
-            <div class='row sd_navigation'>
+            <div class='row sd_navigation'> <!-- navaigation -->
               <a href="/" class="sd_navigation_item" style="color:#333333"><u>Home</u></a>
               <img class="sd_navigation_item" src="/static/images/next1.png" disabled/>
               <label class="sd_navigation_item">University profile</label>
             </div>
-            <div class="row">
+            <div class="row"> <!-- Name -->
               <div class="col-md text-center">
                 <p style="font-family: Open sans-serif; font-size: 35px; font-weight: bold">{{inst.PROVIDER_NAME}}</p>
               </div>
             </div>
-            <div class="row imageCenterAlign topAlign">
+            <div class="row imageCenterAlign topAlign">  <!-- about and logo -->
               <div class="col-md-6 equal center-block image-center">
                 <p style="font-family:sans-serif; font-size: 18px"><br>{{wiki.summary}}<a href={{wiki.url}}> ...</a></p>
                 </initrd.imgv>
@@ -24,12 +24,12 @@
                 <img src={{logo}} height="300" class="center-block image-center" />
               </div> 
             </div>
-            <div class="row">
+            <div class="row">  <!-- 'Programme' title -->
               <div class="col-md-8">
-                <h3>Programs</h3>
+                <h3>Programmes</h3>
               </div>
             </div>
-            <div class="row">
+            <div class="row">  <!-- Programs' list -->
                 <div class="col-md-6">
                     <ul style="padding-right:-20px">
                     {% for c in range(7) %}
@@ -37,16 +37,16 @@
                     {%endfor%}
                     </ul>
                 </div> 
-                <div class="col-md-6">
+                <!--div class="col-md-6">
                       <div class="row">
                         <div class="col-md-6 text-right" ><label class="sd_percentage">Graduation rates </br>76%</label></div>
                         <div class="col-md-6 text-left"><label class="sd_percentage">Employment chances </br>85%</label></div>
                       </div>
                       <div class="row">
-                        <div class="col-md-6 text-right"><label  class="sd_percentage">Quality of life measures 72%</label></div>
+                        <div class="col-md-6 text-right"><label  class="sd_percentage">Avarage salary <br>72%</label></div>
                         <div class="col-md-6 text-left"><label class="sd_percentage">Teaching excellence 70%</label></div>
                       </div>      
-                </div> 
+                </div --> 
             </div>  
         </div>
 
