--- a/website/templates/sandbox.html
+++ b/website/templates/sandbox.html
@@ -489,3 +489,12 @@
             </tbody>
         </table>   
     </div>
+
+    <div class="row">
+        <div class="text-center">
+        <!--div class="col-md-3 col-md-offset-3"-->
+        <!--div class="col-md-3 col-center"-->    
+          <input type="submit" class="btn btn-default" value="Rank submit">
+          <!--input type="button" class="btn btn-default" value="Rank button" onclick="set_visible()"-->
+        </div>
+    </div>
