fixed search button, changed course to department on index page search form

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,8 +46,8 @@
           </ul>
            <form class="navbar-form navbar-right" action="/search" method="get">
             <div class="form-group input-group" style="margin: 3px;">
-            <input type="text" class="form-control" name="searchInput" id="searchbar" placeholder="type here ...">
-            <button type="submit" class="btn btn-primary">Search</button>
+            <input style="width:70%" type="text" class="form-control" name="searchInput" id="searchbar" placeholder="type here ...">
+            <button style="width:30%; border-color:black; background-color:black" type="submit" class="btn btn-primary">Search</button>
         </div><!--/.nav-collapse -->
         </form>
       </div>
