--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,33 @@
           </select> 
       </div>
       <div class="form-group col-md-3 ">
-          <label for="courseSelect">Course</label> 
-          <input name="course" type="text" placeholder="type course name" class="form-control" required>
+          <label for="departmentSelect">Department</label> 
+          <!--input name="course" type="text" placeholder="type course name" class="form-control" required-->
+          <select name="department" class="form-control" id="departmentSelect">
+            <option value='CAH01'>Medicine and Dentistry</option>
+            <option value='CAH02'>Subjects allied to medicine</option>
+            <option value='CAH03'>Biological and Sport sciences</option>
+            <option value='CAH04'>Psychology</option>
+            <option value='CAH05'>Veterinary sciences</option>
+            <option value='CAH06'>Agriculture, food and related studies</option>
+            <option value='CAH07'>Physical sciences</option>
+            <option value='CAH08'>General and others in sciences</option>
+            <option value='CAH09'>Mathematical sciences</option>
+            <option value='CAH10'>Engineering and Technology</option>
+            <option value='CAH11'>Computing</option>
+            <option value='CAH12'>Geographical and Environmental studies</option>
+            <option value='CAH13'>Architecture, Building and Planning</option>
+            <option value='CAH14'>Humanities and Liberal arts</option>
+            <option value='CAH15'>Social sciences</option>
+            <option value='CAH16'>Law</option>
+            <option value='CAH17'>Business and Management</option>
+            <option value='CAH18'>Communications and Media</option>
+            <option value='CAH19'>Language and Area studies</option>
+            <option value='CAH20'>Historical, philosophical and religious studies</option>
+            <option value='CAH21'>Creative arts and Design</option>
+            <option value='CAH22'>Education and Teaching</option>
+            <option value='CAH23'>Combined and General studies</option>
+        </select>
       </div>
       <div class="form-group col-md-3 ">
           <label for="yearSelect">Year</label>
