--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -11,24 +11,34 @@
 
 <hr>
 <div>
-    {% if unis %}
-        <h2> Institutions </h2>
-        <ul>
-            {% for uni in unis %}
-            <li> <a href="/institution/{{ uni.UKPRN }}">{{ uni.PROVIDER_NAME }}</a></li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-    {% if courses %}
-        <h2> Courses </h2>
-        <ul>
-            {% for course in courses %}
-            <li> <a href="/course/{{ course.PROVIDER_NAME
-            }}/{{course.KISCOURSEID}}">{{ course.TITLE }}</a> - <a
-                    href="/institution/{{course.UKPRN}}">{{course.PROVIDER_NAME}}</a></li>
-            {% endfor %}
-        </ul>
-    {% endif %}
+
+
+
+{%if results%}
+ <h2> Institutions </h2>
+    <ul>
+    {%for uni in results%}
+        {%if uni.PROVIDER_NAME%}
+
+                 <li> Courses at: <a href="/institution/{{ uni.UKPRN }}">{{ uni.PROVIDER_NAME.title() }}</a>
+                {%for course in uni.courses_list%}
+
+                <ul>
+                    <li> 
+                    <a href="/course/{{ course.UKPRN
+                    }}/{{course.KISCOURSEID}}">{{ course.TITLE.title() }}</a>
+                    </li>
+                </ul>
+
+                {%endfor%}
+                </li>
+        {%endif%}
+    {%endfor%}
+    </ul>
+{%else%}
+No Results
+{%endif%}
+
 </div>
 
 
