added about page to navbar, put people's first names there too.

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -40,13 +40,14 @@
              <li> <a href="/">
           <span class="glyphicon glyphicon-home" style="font-size:24px;color:grey"></span> </a>  </li>  
           <li><span class="navbar-text" style="font-size:20px;margin: 16
-          px;">Rank it</span>
+          px;"><a href="/">Rank it</a></span>
          </li>
-            <li><a href="/unis" style="margin: 3.5px;">List of Universities</a></li>
+            <li><a href="/unis" style="margin: 3.5px;">All Universities</a></li>
+            <li><a href="/about" style="margin: 3.5px;">About</a></li>
           </ul>
            <form class="navbar-form navbar-right" action="/search" method="get">
             <div class="form-group input-group" style="margin: 3px;">
-            <input type="text" class="form-control" name="searchInput" id="searchbar" placeholder="type here ...">
+            <input type="text" class="form-control" name="searchInput" id="searchbar" placeholder="Search here...">
             <button type="submit" class="btn btn-primary">Search</button>
         </div><!--/.nav-collapse -->
         </form>
