--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -5,4 +5,11 @@
         <h1>About</h1>
         <p class="lead"> This website was made by group 6 </p>
       </div>
+        <p> <ul>
+            <li> Almas </li> 
+            <li> Angel </li>
+            <li> Jim Walker - Middle End - Flask wrangler</li>
+            <li> Paolo </li>
+            <li> Racky </li>
+        </ul></p>
 {% endblock %}
