Added Paolo's info

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -9,7 +9,7 @@
             <li> Almas </li> 
             <li> Angel </li>
             <li> Jim Walker - Middle End - Flask wrangler</li>
-            <li> Paolo </li>
+            <li> Paolo Marangio- Usability Analysis - Project Evaluation- Web Crawler experimenter -  </li>
             <li> Racky </li>
         </ul></p>
 {% endblock %}
