--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -6,7 +6,7 @@
         <p class="lead"> This website was made by group 6 </p>
       </div>
         <p> <ul>
-            <li> Almas </li> 
+            <li> Almas Dossymbekov - Front End - Javascript, HTML, CSS </li> 
             <li> Angel </li>
             <li> Jim Walker - Middle End - Flask wrangler</li>
             <li> Paolo Marangio - Usability Analysis - Project Evaluation - Web Crawler experimenter -  </li>
